# xplorerobot-rov

./: .gitignore  README.md  package-lock.json  package.json  ros2.list  xr-rov.code-workspace
backend/: .env  docker-compose.yml  main.py  mavlink.py  requirements.txt  ros2_bridge.py  run_all.py  server.py
rover-ui/: index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js
rover-ui/src/: App.css  App.tsx  index.css  main.tsx
rover-ui/src/components/: MenuCard.tsx  PwmOutputs.tsx  Tabs.tsx
rover-ui/src/context/: TelemetryContext.tsx
rover-ui/src/layouts/: Navbar.tsx  Sidebar.tsx
rover-ui/src/pages/: AutonomousROS2.tsx  ManualROS2.tsx
rover-ui/src/types/: menu.ts  telemetry.ts
rover-ui/src/views/: BlueOSVersion.tsx  Dashboard.tsx  Home.tsx  TerminalView.tsx
src/bluerov2_control/config/: cascaded_pid.yaml
src/polebot_amr/: CMakeLists.txt  package.xml
src/polebot_amr_bringup/: CMakeLists.txt  package.xml
src/polebot_amr_controller/: CMakeLists.txt  package.xml
src/polebot_amr_controller/configs/: polebot_amr_controllers.yaml
src/polebot_amr_description/: CMakeLists.txt  package.xml
src/polebot_amr_docking/: CMakeLists.txt  package.xml
src/polebot_amr_simulation/: CMakeLists.txt  package.xml
src/polebot_amr_system_tests/: CMakeLists.txt  package.xml
src/xr_rov/: CMakeLists.txt  README.md  package.xml
src/xr_rov/xr_rov_webserver/: index.html  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
src/xr_rov/xr_rov_webserver/public/js/: eventemitter2.min.js
src/xr_rov/xr_rov_webserver/src/: App.vue  firebase.ts  global.d.ts
src/xr_rov/xr_rov_webserver/src/components/: AppLayout.vue  GoalPlanning.vue  Login.vue  Register.vue
src/xr_rov/xr_rov_webserver/src/route/: index.ts
src/xr_rov/xr_rov_webserver_backend/: index.js  package.json  polebot.sql
src/xr_rov_bringup/: CMakeLists.txt  package.xml
src/xr_rov_control/: CMakeLists.txt  package.xml
src/xr_rov_description/: CMakeLists.txt  package.xml
src/xr_rov_system_tests/: CMakeLists.txt  package.xml
(+138 files in other folders)
