<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>polebot_amr_controller</name>
  <version>0.0.0</version>
  <description>Controller package for POLEBOT_AMR robots by NJ-Ramadhan</description>
  <maintainer email="nj.ramadhan.mechatronics@gmail.com">NJ-Ramadhan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_manager</depend>
  <depend>rviz2</depend>
  <depend>ros2_control</depend>
  <depend>polebot_amr_slam</depend> 

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
